--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
 
     pgadmin:
         image: dpage/pgadmin4
+        container_name: pgadmin
         links:
             - postgres:postgres
         networks:
@@ -29,6 +30,7 @@ services:
 
     mailhog:
         image: mailhog/mailhog:latest
+        container_name: mailhog
         logging:
             driver: "none"
         networks:
@@ -38,6 +40,7 @@ services:
 
     redis:
         image: redis:6-alpine
+        container_name: redis
         env_file:
             - .env
         command: redis-server --requirepass ${REDIS_PASS}
@@ -46,8 +49,12 @@ services:
 
     rabbitmq:
         image: rabbitmq:3.8-alpine
+        container_name: rabbitmq
 
     backend:
+        container_name: backend
+        networks:
+            - internal
         depends_on:
             - postgres
             - redis
@@ -82,6 +89,7 @@ services:
     #         dockerfile: celery.dockerfile
 
     frontend:
+        container_name: frontend
         ports:
             - "3000:3000"
         build:
