--- a/.env
+++ b/.env
@@ -6,6 +6,19 @@ DOCKER_IMAGE_BACKEND=backend
 DOCKER_IMAGE_CELERYWORKER=celery
 DOCKER_IMAGE_FRONTEND=frontend
 
+
+SERVER_NAME=sikshalaya
+SERVER_HOST=http://localhost
+
+UVICORN_SERVER_NAME=localhost
+UVICORN_SERVER_HOST=http://localhost
+UVICORN_HOST=0.0.0.0
+UVICORN_WORKERS=5
+UVICORN_MODE=DEBUG
+UVICORN_PORT=80
+
+PROJECT_NAME=sikshyalaya
+
 # Backend
 BACKEND_CORS_ORIGINS=["http://localhost", "http://localhost:4200", "http://localhost:3000", "http://localhost:8080", "https://localhost", "https://localhost:4200", "https://localhost:3000", "https://localhost:8080", "http://dev.fastapi-base.com", "https://stag.fastapi-base.com", "https://fastapi-base.com", "http://local.dockertoolbox.tiangolo.com", "http://localhost.tiangolo.com"]
 PROJECT_NAME=Sikshalaya
