School and Department CRUD and Basic API endpoint created

--- a/.env
+++ b/.env
@@ -40,7 +40,7 @@ SENTRY_DSN=
 REDIS_PASS=test
 
 # Postgres
-POSTGRES_SERVER=default
+POSTGRES_SERVER=postgres
 POSTGRES_USER=test
 POSTGRES_PASSWORD=test
 POSTGRES_DB=app
