--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -27,6 +27,7 @@ uvicorn = {version = "^0.13.4", extras = ["standard"]}
 google-auth = "^1.28.0"
 cryptography = "3.3.1"
 python-jose = "^3.2.0"
+Faker = "^8.1.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.812"
