Minor env vars changed

--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ SERVER_NAME=sikshalaya
 SERVER_HOST=http://${DOMAIN}
 
 
-UVICORN_HOST=$DOMAIN
+UVICORN_HOST=${DOMAIN}
 UVICORN_WORKERS=5
 UVICORN_PORT=8080
 
@@ -35,7 +35,7 @@ USERS_OPEN_REGISTRATION=False
 
 
 # Redis
-REDIS_PASS=test
+REDIS_PASSWORD=${SECRET_KEY}
 
 # Postgres
 POSTGRES_SERVER=localhost
