--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,6 +29,7 @@ Mako = "^1.1.4"
 python-dotenv = "^0.17.0"
 click = "^7.1.2"
 aioredis = "^1.3.1"
+aiofiles = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.812"
@@ -42,6 +43,7 @@ pytest-cov = "^2.11.1"
 pylint = "^2.7.2"
 rope = "^0.18.0"
 jedi = "^0.18.0"
+autopep8 = "^1.5.6"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
