--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "formik": "^2.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-joi-validation": "^1.7.0",
     "react-router-dom": "^5.2.0",
