--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-joi-validation": "^1.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "saas": "^1.0.0",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
