--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,14 +2,21 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
+    "@emotion/css": "^11.1.3",
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "emotion": "10.0.27",
+    "emotion-icons": "^3.13.0",
     "formik": "^2.2.6",
     "idb-keyval": "^5.0.5",
+    "is-hotkey": "^0.2.0",
+    "material-icons": "^0.6.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
@@ -18,6 +25,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "saas": "^1.0.0",
+    "serve": "^11.3.2",
+    "slate": "^0.63.0",
+    "slate-history": "^0.62.0",
+    "slate-react": "^0.63.0",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
