--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3'
 services:
     backend:
         container_name: backend
@@ -46,7 +47,7 @@ services:
         container_name: redis
         env_file:
             - .env
-        command: redis-server --requirepass ${REDIS_PASSWORD}
+        command: redis-server --requirepass ${SECRET_KEY}
         networks:
             - internal
 
