--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ docker-stack.yml
 __pycache__/
 app.egg-info
 node_modules/
-**/migrations/versions/
+**/migrations/versions/*
+!**/migrations/versions/__init__.py
 static/
