--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,11 +18,13 @@
     "idb-keyval": "^5.0.5",
     "is-hotkey": "^0.2.0",
     "material-icons": "^0.6.3",
+    "quill-delta": "^4.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-joi-validation": "^1.7.0",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "saas": "^1.0.0",
