Mount backend folder to support reload on change + Load PGAdmin envs from .env

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -8,11 +8,17 @@ services:
         ports:
             - "6379:6379"
 
+    backend:
+        volumes:
+          - ./backend:/app
+        ports:
+          - "8080:8080"
+
     pgadmin:
         environment:
             - PGADMIN_LISTEN_PORT=5050
-            - PGADMIN_DEFAULT_EMAIL=test@test.com
-            - PGADMIN_DEFAULT_PASSWORD=test
+            - PGADMIN_DEFAULT_EMAIL=${PGADMIN_USER}
+            - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_PASS}
 
     file_server:
         volumes:
@@ -26,4 +32,4 @@ services:
         ports:
             - "8025:8025"
             - "1025:1025"
-    
+
