Start fastapi on launch

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
         build:
             context: ./
             dockerfile: ./dockerfiles/backend.dockerfile
+        command: python manage.py start
         networks:
             - internal
 
