.jpeg added to nginx.conf

--- a/dockerfiles/nginx.conf
+++ b/dockerfiles/nginx.conf
@@ -15,7 +15,7 @@ http {
     access_log  /var/log/nginx/access.log  main;
     server {
         listen 80;
-        location ~* \.(js|jpg|png|css)$ {
+        location ~* \.(js|jpg|jpeg|png|css)$ {
             root /usr/share/nginx/html/;
         }
     }
