Backend container launches gunicorn on start

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     build:
       context: ./
       dockerfile: ./dockerfiles/backend.dockerfile
-    command: python manage.py start
+    command: sh ./scripts/gunicorn_launch.sh
     networks:
       - internal
 
