--- a/.env.development
+++ b/.env.development
@@ -15,6 +15,7 @@ DOCKER_IMAGE_FRONTEND=frontend
 
 SERVER_NAME=sikshalaya
 SERVER_HOST=http://${DOMAIN}
+SERVER_PORT=3000
 
 
 UVICORN_HOST=${DOMAIN}
