Protocal added to config

--- a/.env
+++ b/.env
@@ -14,7 +14,8 @@ DOCKER_IMAGE_FRONTEND=frontend
 
 
 SERVER_NAME=sikshalaya
-SERVER_HOST=http://${DOMAIN}
+PROTOCAL=http
+SERVER_HOST=${DOMAIN}
 SERVER_PORT=3000
 
 
