--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
 		"idb-keyval": "^5.0.5",
 		"is-hotkey": "^0.2.0",
 		"material-icons": "^0.6.3",
+		"material-ui-dropzone": "^3.5.0",
 		"quill-delta": "^4.2.2",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
