Frontend and backend host port config separated

--- a/.env.development
+++ b/.env.development
@@ -15,8 +15,13 @@ DOCKER_IMAGE_FRONTEND=frontend
 
 SERVER_NAME=sikshalaya
 PROTOCAL=http
-SERVER_HOST=${DOMAIN}
-SERVER_PORT=3000
+
+SERVER_FRONTEND_HOST=${DOMAIN}
+SERVER_FRONTEND_PORT=3000
+
+SERVER_BACKEND_HOST=${DOMAIN}
+SERVER_BACKEND_PORT=8080
+
 
 
 UVICORN_HOST=${DOMAIN}
