--- a/dockerfiles/etc/nginx.conf
+++ b/dockerfiles/etc/nginx.conf
@@ -15,7 +15,7 @@ http {
     access_log  /var/log/nginx/access.log  main;
     server {
         listen 80;
-        location ~* \.(js|jpg|jpeg|png|css|pdf|pptx|ppt|7z|zip|rar|doc|docx)$ {
+        location ~* \.(jpg|jpeg|png|pdf|pptx|ppt|7z|zip|rar|doc|docx)$ {
             root /usr/share/nginx/html/;
         }
     }
