--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ UVICORN_PORT=8080
 
 
 # Backend
-BACKEND_CORS_ORIGINS=["http://localhost", "http://localhost:4200", "http://localhost:3000", "http://localhost:8080", "https://localhost", "https://localhost:4200", "https://localhost:3000", "https://localhost:8080"]
+BACKEND_CORS_ORIGINS=["http://localhost", "http://localhost:4200", "http://localhost:3000", "http://localhost:8080", "http://localhost:3001"]
 SMTP_TLS=False
 SMTP_PORT=1025
 SMTP_HOST=localhost
