--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"serve": "^12.0.0",
+		"ua-parser-js": "^0.7.28",
 		"web-vitals": "^1.0.1",
 		"yup": "^0.32.9"
 	},
