--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   #svg
   flutter_svg: ^0.22.0
   url_launcher: ^6.0.20
+  flutter_secure_storage: ^5.0.2
+  http: ^0.13.4
+  flutter_bloc: ^8.0.1
+  equatable: ^2.0.3
+  email_validator: '^2.0.1'
 
 #state management
 get: ^4.1.4
