--- a/file_server/nginx.conf
+++ b/file_server/nginx.conf
@@ -15,8 +15,11 @@ http {
     access_log  /var/log/nginx/access.log  main;
     server {
         listen 80;
-        location ~* \.(js|jpg|jpeg|png|css|pdf|pptx|ppt|7z|zip|rar|doc|docx)$ {
-            root /usr/share/nginx/html/;
+        location ~* ^/static/.+\.(js|css)$ {
+            root /content/;
+        }
+        location ~* \.(js|css|jpg|jpeg|png|pdf|pptx|ppt|7z|zip|rar|doc|docx)$ {
+            root /content/;
         }
     }
     sendfile        on;
