--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,13 +23,13 @@ psycopg2-binary = "^2.8.6"
 SQLAlchemy = "^1.4.2"
 pytest = "^6.2.2"
 uvicorn = {version = "^0.13.4", extras = ["standard"]}
-cryptography = "3.4.7"
 Faker = "^8.1.0"
 Mako = "^1.1.4"
-python-dotenv = "^0.17.0"
 click = "^7.1.2"
 aioredis = "^1.3.1"
 aiofiles = "^0.6.0"
+cryptography = "^36.0.2"
+PyYAML = "^6.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.812"
