--- a/backend/etc/dev.yml
+++ b/backend/etc/dev.yml
@@ -22,6 +22,9 @@ backend:
   FRONTEND_HOST : localhost
   FRONTEND_PORT : 3001
 
+  STATIC_HOST : localhost
+  STATIC_PORT : 8081
+
   UPLOAD_DIR_ROOT : ../file_server
 
   BACKEND_CORS_ORIGINS :
