fix: .env.example and docker-compose.yml updated

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ REDIS_PASSWORD=redispass
 
 # Postgres
 POSTGRES_SERVER=postgres
-POSTGRES_USER=test
-POSTGRES_PASSWORD=test
-POSTGRES_DB=app
+POSTGRES_USER=postadmin
+POSTGRES_PASSWORD=postpass
+POSTGRES_DB=sikshyalaya
+
+#PgAdmin
+PGADMIN_DEFAULT_EMAIL=test@test.com
+PGADMIN_DEFAULT_PASSWORD=test
