--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -41,7 +41,8 @@ dependencies:
   http: ^0.13.4
   flutter_bloc: ^8.0.1
   equatable: ^2.0.3
-  email_validator: '^2.0.1'
+  email_validator: "^2.0.1"
+  flutter_quill: ^4.0.10
 
 #state management
 get: ^4.1.4
