--- a/file_server/nginx.conf
+++ b/file_server/nginx.conf
@@ -16,7 +16,7 @@ http {
     server {
         listen 80;
         location ~* ^/static/.+\.(js|css)$ {
-            root /content/;
+            root /extras/;
         }
         location ~* \.(js|css|jpg|jpeg|png|pdf|pptx|ppt|7z|zip|rar|doc|docx)$ {
             root /content/;
