--- a/file_server/Dockerfile
+++ b/file_server/Dockerfile
@@ -2,6 +2,6 @@ FROM nginx:1.20-alpine
 
 COPY nginx.conf /etc/nginx/nginx.conf
 
-COPY static/* /content/static/
+COPY static/* extras/static/
 
 EXPOSE 80
