--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   equatable: ^2.0.3
   email_validator: "^2.0.1"
   flutter_quill: ^4.0.10
+  cached_network_image: ^3.2.0
+  flutter_spinkit: ^5.1.0
 
 #state management
 get: ^4.1.4
