--- a/file_server/Dockerfile
+++ b/file_server/Dockerfile
@@ -2,6 +2,11 @@ FROM nginx:1.20-alpine
 
 COPY nginx.conf /etc/nginx/nginx.conf
 
-COPY static/* extras/static/
+RUN mkdir -p /extras/static
+RUN mkdir /content
+
+RUN wget https://cdn.jsdelivr.net/npm/swagger-ui-dist@3/swagger-ui-bundle.js -P /extras/static
+RUN wget https://cdn.jsdelivr.net/npm/swagger-ui-dist@3/swagger-ui.css -P /extras/static
 
 EXPOSE 80
+
