--- a/web/package.json
+++ b/web/package.json
@@ -1,58 +1,61 @@
 {
-	"name": "frontend",
-	"version": "0.1.0",
-	"private": true,
-	"homepage": ".",
-	"dependencies": {
-		"@date-io/date-fns": "1.x",
-		"@material-ui/core": "^4.11.4",
-		"@material-ui/icons": "^4.11.2",
-		"@material-ui/lab": "^4.0.0-alpha.58",
-		"@material-ui/pickers": "^3.3.10",
-		"@testing-library/jest-dom": "^5.11.4",
-		"@testing-library/react": "^11.1.0",
-		"@testing-library/user-event": "^12.1.10",
-		"axios": "^0.21.1",
-		"date-fns": "^2.22.1",
-		"formik": "^2.2.6",
-		"idb-keyval": "^5.0.5",
-		"material-ui-dropzone": "^3.5.0",
-		"quill-delta": "^4.2.2",
-		"react": "^17.0.1",
-		"react-dom": "^17.0.1",
-		"react-helmet": "^6.1.0",
-		"react-icons": "^4.2.0",
-		"react-joi-validation": "^1.7.0",
-		"react-quill": "^1.3.5",
-		"react-router-dom": "^5.2.0",
-		"react-scripts": "4.0.3",
-		"serve": "^12.0.0",
-		"ua-parser-js": "^0.7.28",
-		"web-vitals": "^1.0.1",
-		"yup": "^0.32.9"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	}
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
+  "homepage": ".",
+  "dependencies": {
+    "@date-io/date-fns": "1.x",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
+    "@material-ui/pickers": "^3.3.10",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "date-fns": "^2.22.1",
+    "formik": "^2.2.6",
+    "idb-keyval": "^5.0.5",
+    "material-ui-dropzone": "^3.5.0",
+    "quill-delta": "^4.2.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
+    "react-joi-validation": "^1.7.0",
+    "react-quill": "^1.3.5",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "serve": "^12.0.0",
+    "ua-parser-js": "^0.7.28",
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "prettier": "2.6.2"
+  }
 }
