--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:15-alpine as reactbuilder
 
+ARG TARGET_BUILD_ENV="prod"
+
 WORKDIR /app
 
 COPY package.json yarn.lock /app/
@@ -9,7 +11,7 @@ RUN yarn install
 
 COPY ./ /app/
 
-RUN yarn build
+RUN yarn build-$TARGET_BUILD_ENV
 
 FROM nginx:1.20-alpine
 
