--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-local": "REACT_APP_TARGET_BUILD_ENV=local react-scripts build",
+    "build-prod": "REACT_APP_TARGET_BUILD_ENV=prod react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
