--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,8 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-joi-validation": "^1.7.0",
+    "react-qr-code": "^2.0.7",
+    "react-qrcode-logo": "^2.7.0",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -32,7 +34,8 @@
     "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3001 && react-scripts start",
+    "start-prod": "REACT_APP_TARGET_BUILD_ENV=prod react-scripts start",
     "start-nondock": "REACT_APP_TARGET_BUILD_ENV=nondock react-scripts start",
     "build": "react-scripts build",
     "build-local": "REACT_APP_TARGET_BUILD_ENV=local react-scripts build",
