--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   otp_text_field: ^1.1.2
   web_socket_channel: ^2.1.0
   intl: ^0.17.0
+  file_picker: ^4.5.1
+  open_file: ^3.2.1
 
 #state management
 get: ^4.1.4
