--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   image_picker: ^0.8.5
   mime: ^1.0.2
   qr_code_scanner: ^0.7.0
+  qr_flutter: ^4.0.0
 
 #state management
 get: ^4.1.4
